fixes the bulk of the problem with #2, but there is still the pop-up text on first input that causes the screen to shift on macs...

--- a/drupal7/bootstrap/go-overlay.css
+++ b/drupal7/bootstrap/go-overlay.css
@@ -4,4 +4,45 @@
     padding:0;
     margin: 2px;
     width: 20em;
+    background-color: white;
+    border-color: #bbbbbb;
+    border-width: 1px;
+    border-style: solid;
+}
+
+.book-navigation {
+    border-top-color: #dddddd;
+    border-top-style: solid;
+    border-top-width: 1px;
+    margin-top: 0.5em;
+    padding-top: 0.5em;
+}
+
+.field-name-field-durable-content-tags {
+    border-top-color: #dddddd;
+    border-top-style: solid;
+    border-top-width: 1px;
+    margin-top: 0.5em;
+    padding-top: 0.5em;
+}
+
+.field-name-field-temporal-content-tags {
+    border-top-color: #dddddd;
+    border-top-style: solid;
+    border-top-width: 1px;
+    margin-top: 0.5em;
+    padding-top: 0.5em;
+}
+
+/* .field-items { */
+/*     display: inline-block; */
+/* } */
+
+/* Override a front page irritation. */ 
+#block-aggregator-category-5 ul {
+    list-style-type: none;
+    padding-left: 0;
+}
+#block-aggregator-category-5 ul li {
+    padding-top: 2px;
 }
